--- a/az-app-website-vs.csproj
+++ b/az-app-website-vs.csproj
@@ -1,10 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>az_app_website_vs</RootNamespace>
+    <ApplicationInsightsResourceId>/subscriptions/af40403d-2662-4afb-ab74-4451dad4ae09/resourceGroups/az-course-rg/providers/microsoft.insights/components/az-course-website-az</ApplicationInsightsResourceId>
+    <UserSecretsId>73a5ac9f-d04b-4161-985a-440551256e1f</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+  </ItemGroup>
 
 </Project>
